--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -1,15 +1,15 @@
 # 注意规则在满足自己需求情况下，尽量做到精简，不要过度复杂，以免影响性能。
 # 机场订阅
-proxy-providers:
-  Mitce:
-    url: "机场订阅"
-    type: http
-    interval: 86400
-    health-check:
-      enable: true
-      url: https://www.gstatic.com/generate_204
-      interval: 300
-    proxy: 直连
+proxy-providers: # 代理提供商
+  Mitce: # 机场名称
+    url: "https://app.mitce.net/?sid=283209&token=srvnscon" # 机场订阅地址
+    type: http # 获取方式
+    interval: 86400 # 更新间隔，单位：秒
+    health-check: # 健康检测（延迟测试）
+      enable: true # 开关，true代表启用，false代表停用
+      url: https://www.gstatic.com/generate_204 # 健康检查地址
+      interval: 300 # 健康检查时间间隔
+    proxy: 全球直连 # 机场更新方式（直连还是代理，名称必须和代理组里的名称相同）
 
 # 节点信息（用于自建VPS节点）
 proxies:
@@ -28,39 +28,54 @@ proxies:
 #      public-key: g-oxbgigzCaXqARxuyD2_vbTYe
 #    uuid: 67a5a3ed-2b19-4699-a25e-17760e34e058
 
-  - {name: 直连, type: direct}
+  - {name: 全球直连, type: direct}
 
 # 全局配置 
-port: 7890
-socks-port: 7891
-redir-port: 7892
-mixed-port: 7893
-tproxy-port: 7894
-allow-lan: true
-bind-address: "*"
-ipv6: false
+port: 7890 # HTTP(S) 代理服务器端口
+socks-port: 7891 # SOCKS5 代理端口
+redir-port: 7892 # 重定向端口
+mixed-port: 7893 # HTTP(S) 和 SOCKS 代理混合端口
+tproxy-port: 7894 # 透明代理端口，用于 Linux 和 MacOS
+allow-lan: true # 允许局域网连接
+bind-address: "*" # 绑定 IP 地址，仅作用于 allow-lan 为 true，'*'表示所有地址
+ipv6: false # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
 unified-delay: true
 tcp-concurrent: true
-log-level: silent
-mode: rule
+log-level: silent # 日志等级 silent/error/warning/info/debug
+mode: rule # 代理模式 rule/global/TUN/direct
+# interface-name: en0 # 设置出口网卡
+
+#  find-process-mode has 3 values:always, strict, off
+#  - always, 开启，强制匹配所有进程
+#  - strict, 默认，由 mihomo 判断是否开启
+#  - off, 不匹配进程，推荐在路由器上使用此模式
 find-process-mode: 'off'
-# interface-name: en0
+
+# 全局 TLS 指纹，优先低于 proxy 内的 client-fingerprint
+# 可选： "chrome","firefox","safari","ios","random","none" options.
+# Utls is currently support TLS transport in TCP/grpc/WS/HTTP for VLESS/Vmess and trojan.
 global-client-fingerprint: chrome
+
+#  TCP keep alive interval
 keep-alive-idle: 600
 keep-alive-interval: 15
-disable-keep-alive: false
+disable-keep-alive: false #目前在android端强制为true
 profile:
   store-selected: true
   store-fake-ip: true
 
+
 # 控制面板
-external-controller: 0.0.0.0:9090
-secret: ""
+external-controller: 0.0.0.0:9090 # RESTful API 监听地址
+secret: "" # `Authorization:Bearer ${secret}`
+
+# 配置 WEB UI 目录，使用 http://{{external-controller}}/ui 访问
 external-ui: "/etc/mihomo/run/ui"
 external-ui-name: zashboard
+# 目前支持下载zip,tgz格式的压缩包
 external-ui-url: "https://github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip"
 
-# 嗅探
+# 嗅探域名 可选配置
 sniffer:
   enable: true
   sniff:
@@ -79,32 +94,45 @@ sniffer:
 # 入站  
 tun:
   enable: true
-  # system/gvisor/mixed
-  stack: mixed
-  dns-hijack: ["any:53", "tcp://any:53"]
-  auto-route: true
-  auto-redirect: true
-  auto-detect-interface: true
+  stack: mixed  # system/gvisor/mixed
+  dns-hijack: ["any:53", "tcp://any:53"] # 需要劫持的 DNS
+  auto-route: true # 配置路由表
+  auto-redirect: true # 自动配置 iptables 以重定向 TCP 连接。仅支持 Linux。带有 auto-redirect 的 auto-route 现在可以在路由器上按预期工作，无需干预。
+  auto-detect-interface: true # 自动识别出口网卡
 
 # DNS模块
 dns:
-  enable: true
-  listen: 0.0.0.0:1053
-  ipv6: false
-  respect-rules: true
-  enhanced-mode: fake-ip
-  fake-ip-range: 28.0.0.1/8
-  fake-ip-filter-mode: blacklist
-  fake-ip-filter:
+  enable: true # 关闭将使用系统 DNS
+  listen: 0.0.0.0:1053 # 开启 DNS 服务器监听
+  ipv6: false # false 将返回 AAAA 的空结果
+  enhanced-mode: fake-ip # or redir-host
+  fake-ip-range: 28.0.0.1/8 # fake-ip 池设置
+  fake-ip-filter-mode: blacklist # 配置fake-ip-filter的匹配模式，默认为blacklist，即如果匹配成功不返回fake-ip，也可设置为whitelist，即只有匹配成功才返回fake-ip
+  fake-ip-filter: # 配置不使用 fake-ip 的域名
     - "rule-set:private_domain,cn_domain"
     - "+.msftconnecttest.com"
     - "+.msftncsi.com"
     - "time.*.com"
+
+ # 配置后面的nameserver、fallback和nameserver-policy向dns服务器的连接过程是否遵守遵守rules规则
+ # 如果为false（默认值）则这三部分的dns服务器在未特别指定的情况下会直连
+ # 如果为true，将会按照rules的规则匹配链接方式（走代理或直连），如果有特别指定则任然以指定值为准
+ # 仅当proxy-server-nameserver非空时可以开启此选项, 强烈不建议和prefer-h3一起使用
+ # 此外，这三者配置中的dns服务器如果出现域名会采用default-nameserver配置项解析，也请确保正确配置default-nameserver
+  respect-rules: true
+
+ # 用于解析 nameserver，fallback 以及其他 DNS 服务器配置的，DNS 服务域名
+ # 只能使用纯 IP 地址，可使用加密 DNS
   default-nameserver:
     - 223.5.5.5
+
+# 专用于节点域名解析的 DNS 服务器，非必要配置项，如果不填则遵循nameserver-policy、nameserver和fallback的配置
   proxy-server-nameserver:
     - https://223.5.5.5/dns-query
-  # namesever尽量用运营商提供的DNS
+
+ # DNS 主要域名配置
+ # 支持 UDP，TCP，DoT，DoH，DoQ
+ # 这部分为主要 DNS 配置，影响所有直连，确保使用对大陆解析精准的 DNS，尽量用运营商提供的DNS
   nameserver:
     - 211.139.29.170
     - 211.139.29.150
